<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TerNout</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_db_loading">DB_loadingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_db__loading">DB_Loading</string>
    <string name="add_record">Добавить запись</string>
    <string name="delete_record">Удалить запись</string>
    <string name="edit_record">Изменить запись</string>
    <string name="s_load">Загрузка</string>
    <string name="s_del_table">Удалить таблицу</string>
    <string name="s_clear_table">Очистить таблицу</string>
    <string name="s_info">Info</string>
    <string name="s_main_act">На главную</string>
    <string name="spinner_title">Таблица: </string>
    <string name="delete_data">Удалить данные?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>
    <string name="title_activity_add_call">AddCallActivity</string>
    <string name="title_activity_select_fio">SelectFioActivity</string>
    <string name="title_activity_select_street">SelectStreetActivity</string>
    <string name="title_activity_select_compaint">SelectComplaint</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

</resources>
