<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="horizontal">
            <Button
                    android:id="@+id/btnMainActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onButtonClick"
                    android:text="@string/s_main_act">
            </Button>
            <Button
                    android:id="@+id/btnAddRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onButtonClick"
                    android:text="@string/add_record">
            </Button>
        </LinearLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Наименование:"
                android:layout_marginLeft="10dip"
                android:id="@+id/tvTableName"/>
        <ListView
                android:id="@+id/lvData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </ListView>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spinner_title"
                    android:id="@+id/spinner_title"/>
            <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
            <Button
                    android:id="@+id/btnLoad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onButtonClick"
                    android:text="@string/s_load">
            </Button>
            <Button
                    android:id="@+id/btnDelTable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onButtonClick"
                    android:text="@string/s_del_table">
            </Button>
            <Button
                    android:id="@+id/btnClearTable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onButtonClick"
                    android:text="@string/s_clear_table">
            </Button>
            <Button
                    android:id="@+id/btnInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onButtonClick"
                    android:text="@string/s_info">
            </Button>
        </LinearLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Info:"
                android:id="@+id/tvInfo"/>
    </LinearLayout>
</LinearLayout>
